Tests/test_output/Surface/ReadSurfaceFiles/test_fs_smooth.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Output argument "out" (and possibly others) not assigned a value in the
execution with "fs_smooth" function.

Error in test_fs_smooth (line 10)
out = fs_smooth( data )
      ^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
